# rusty-book-manager

./: Cargo.toml  Dockerfile  Makefile.toml  compose.yaml
.github/workflows/: ci.yaml
adapter/: Cargo.toml
adapter/migrations/: 20241019130508_start.down.sql  20241019130508_start.up.sql
adapter/src/database/: mod.rs
adapter/src/database/model/: auth.rs  book.rs  user.rs
adapter/src/redis/: mod.rs
adapter/src/repository/: auth.rs  book.rs  health.rs  user.rs
api/: Cargo.toml
api/src/: extractor.rs
api/src/handler/: auth.rs  book.rs  health.rs
api/src/model/: auth.rs
api/src/route/: auth.rs  book.rs  health.rs
data/: initial_setup.sql
kernel/: Cargo.toml
kernel/src/model/: id.rs
kernel/src/model/user/: mod.rs
kernel/src/repository/: auth.rs  book.rs
registry/: Cargo.toml
registry/src/: lib.rs
shared/: Cargo.toml
shared/src/: config.rs  env.rs  error.rs
src/: main.rs
