[package]
name = "rusty-book-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "kernel", "adapter", "shared", "registry"]

[workspace.dependencies]
adapter = { path = "./adapter" }
api = { path = "./api" }
kernel = { path = "kernel" }
shared = { path = "shared" }
registry = { path = "registry" }
anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["macros"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "uuid",
    "chrono",
    "macros",
    "postgres",
    "migrate",
] }
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1.83"
derive-new = "0.7.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
serde = { version = "1.0.210", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.64"
tracing = { version = "0.1.40", features = ["log"] }
garde = { version = "0.20.0", features = ["derive", "email"] }
redis = { version = "0.27.5", features = ["tokio-rustls-comp"] }

[dependencies]
adapter.workspace = true
api.workspace = true
shared.workspace = true
registry.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true
redis.workspace = true
sqlx.workspace = true
strum.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
garde.workspace = true
